--- a/styles2.css
+++ b/styles2.css
@@ -21,7 +21,7 @@ body {
 }
 
 .image img {
-  width: 100%;
+  width: 400px; height: 400px;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
 }
@@ -39,17 +39,23 @@ h1:hover {
 .des {
   padding: 3px;
   text-align: center;
-
   padding-top: 10px;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
+  text-overflow: clip;
+
 }
+
+.des :hover{
+  overflow: visible;
+}
+
 button {
   margin-top: 40px;
   margin-bottom: 10px;
   background-color: white;
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 25%;
   padding: 10px;
 }
 button:hover {
@@ -61,7 +67,7 @@ button:hover {
 button{
   color: antiquewhite;
   background-color:red;
-  border-color: royalblue;
+  border: 1px solid black;
   border-radius: 25%;
 }
 
